--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1708,6 +1708,7 @@
          "power" = Power off
          "reboot" = Add an option to reboot the device
          "screenshot" = Add an option to take a screenshot
+         "screenrecord" = Add an option to record the screen
          "lockdown" = Add an action that locks the phone and enforces that it can't be unlocked without entering a credential
          "settings" = An action to launch settings
          "airplane" = Airplane mode toggle
@@ -1719,7 +1720,7 @@
         <item>power</item>
         <item>reboot</item>
         <item>screenshot</item>
-        <item>silent</item>
+        <item>screenrecord</item>
     </string-array>
 
     <!-- default telephony hardware configuration for this platform.
@@ -1874,23 +1875,7 @@
     <string-array translatable="false" name="config_sms_convert_destination_number_support">
         <item>false</item>
     </string-array>
-<<<<<<< HEAD
-=======
-
-    <!-- kill app long press back -->
-    <integer name="config_backKillTimeout">2000</integer>
-
-    <!-- Setting to false will disable CM's IME switcher implementation for tablets -->
-    <bool name="config_show_cmIMESwitcher">true</bool>
-
-    <!-- The list of components which should be automatically disabled. -->
-    <string-array name="config_disabledComponents" translatable="false">
-    </string-array>
-
-    <!-- Configuartion to set zen mode when silent mode is on -->
-    <bool name="config_setZenModeWhenSilentModeOn">false</bool>
 
     <!-- If this is true, key chords can be used to take a screen record on the device. -->
     <bool name="config_enableScreenrecordChord">true</bool>
->>>>>>> 15bedc5... Base:screen recorder [1/2]
 </resources>
